--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "yeoman-tutorial",
+  "name": "angular-todolist",
   "version": "0.0.0",
   "dependencies": {
     "angular": "^1.3.0",
@@ -18,7 +18,7 @@
     "angular-mocks": "^1.3.0"
   },
   "appPath": "app",
-  "moduleName": "yeomanTutorialApp",
+  "moduleName": "todolistApp",
   "overrides": {
     "bootstrap": {
       "main": [
